try to fix iframes on ios

--- a/bin/css/clientstyle.css
+++ b/bin/css/clientstyle.css
@@ -12,6 +12,11 @@ body {
 	background-color: #222;
 	overflow-x: hidden;
 	word-wrap: break-word;
+
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
 }
 
 div {
